<resources>
    <string name="app_name">Connect</string>
    <string name="placeholderText">TextView</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="badge">Badge</string>
    <string name="attachment_type">Attachment Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="upload_attachment">Upload Attachment</string>
    <string name="close_webview">Close WebView</string>
    <string name="CalendarWeek_acronym">CW</string>
    <string name="Monday_acronym">Mon</string>
    <string name="Tuesday_acronym">Tue</string>
    <string name="Wednesday_acronym">Wed</string>
    <string name="Thursday_acronym">Thu</string>
    <string name="Friday_acronym">Fri</string>
    <string name="Saturday_acronym">Sat</string>
    <string name="Sundday_acronym">Sun</string>
    <string name="submit_vacation_request">Submit vacation request</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_button">Call Button</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_forgotton">Password forgotton?</string>
    <string name="connect_app_logo">.Connect App Logo</string>
    <string name="sent_message_button">Sent Message Button</string>
    <string name="message">Message</string>
    <string name="send_e_mail">Send E-Mail</string>
    <string name="app_connect_logo">App .Connect Logo</string>
    <string name="logout">Logout</string>
    <string name="logout_button">Logout Button</string>
    <string name="change_password_button">Change Password Button</string>
    <string name="change_password">Change Password: .........................................................................................</string>
    <string name="logout_text">Logout: ..................................................................................................</string>
    <string name="feiertage">Feiertage</string>
    <string name="open_close_api_checkboxes">open/close Api Checkboxes</string>
    <string name="bundesweit">Bundesweit</string>
    <string name="baden_nw_rttemberg">Baden-\nWürttemberg</string>
    <string name="bayern">Bayern</string>
    <string name="berlin">Berlin</string>
    <string name="brandenburg">Brandenburg</string>
    <string name="bremen">Bremen</string>
    <string name="hamburg">Hamburg</string>
    <string name="hessen">Hessen</string>
    <string name="mecklenburg_nvorpommern">Mecklenburg-\nVorpommern</string>
    <string name="niedersachsen">Niedersachsen</string>
    <string name="nordrhein_nwestfalen">Nordrhein-\nWestfalen</string>
    <string name="rheinland_npfalz">Rheinland-\nPfalz</string>
    <string name="saarland">Saarland</string>
    <string name="sachsen">Sachsen</string>
    <string name="sachsen_nanhalt">Sachsen-\nAnhalt</string>
    <string name="schleswig_nholstein">Schleswig-\nHolstein</string>
    <string name="th_ringen">Thüringen</string>
    <string name="save">Save</string>
    <string name="search_name_or_department">Search name or department</string>
    <string name="remove_input_text">Remove Input Text</string>
    <string name="open_close_description">Open/Close Description</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="Passwort_info_text">The password must have at least 6 characters, please note capitalization</string>
</resources>