<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.InfoFragment">

    <ImageView
        android:id="@+id/iv_profilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:elevation="20dp"
        android:foregroundGravity="fill"
        android:src="@drawable/jennifer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:hintTextColor="@color/new_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profilePicture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/department"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:hintTextColor="@color/new_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_department"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/e_mail"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:hintTextColor="@color/new_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_department">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:hintTextColor="@color/new_tertiary"
        app:layout_constraintEnd_toStartOf="@id/btn_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_call"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/new_tertiary"
        android:contentDescription="@string/call_button"
        app:layout_constraintBottom_toBottomOf="@id/til_number"
        app:layout_constraintEnd_toEndOf="@id/til_email"
        app:layout_constraintStart_toEndOf="@id/til_number"
        app:layout_constraintTop_toTopOf="@id/til_number"
        app:srcCompat="@drawable/baseline_phone_enabled_24"
        app:tint="@color/new_secondary" />

</androidx.constraintlayout.widget.ConstraintLayout>